[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name. The runtime import path stays `net`
# (see `[tool.maturin].module-name` and `python-source` below) so
# user code keeps `from net import ...` working.
name = "ai2070-net"
version = "0.18.0"
description = "High-performance, schema-agnostic event bus for AI runtime workloads"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
keywords = ["event-bus", "high-performance", "streaming", "ai", "llm", "rust"]

[project.optional-dependencies]
test = ["pytest>=9.0.0"]

[project.urls]
Homepage = "https://github.com/ai-2070/net"
Repository = "https://github.com/ai-2070/net"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "net._net"
