[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name. PyPI accepted the bare `net-deck` name
# (no similarity collision); the CLI sibling uses `net-mesh-cli`
# because PyPI rejected `net-cli`. See the cross-registry naming
# table in the top-level README.
name = "net-deck"
version = "0.21.0"
description = "net-deck — operator cyberdeck (terminal UI) for the Net mesh"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]
keywords = ["net-mesh", "mesh", "tui", "cyberdeck", "operator"]

[project.urls]
Homepage = "https://github.com/ai-2070/net"
Repository = "https://github.com/ai-2070/net"

[tool.maturin]
bindings = "bin"
manifest-path = "../Cargo.toml"
strip = true
