[package]
name = "net-compute-ffi"
version = "0.34.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C ABI compute (MeshDaemon + migration) surface for the Go binding of Net"
# Distributed as a cdylib alongside the Go binding, not via crates.io.
# Block accidental `cargo publish`.
publish = false

[lib]
# `cdylib` for the shared object Go links against; `staticlib` for
# platforms that prefer `.a` archives. `rlib` alongside lets any
# in-crate `#[cfg(test)] mod tests` compile — cargo requires an rlib
# to link the unit-test harness. The shipped artifact is the cdylib.
name = "net_compute"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# `test-helpers` exposes FFI symbols that exist solely to support
# the vitest / pytest / `go test` suites (e.g. injecting synthetic
# capability announcements without a real handshake). Production
# builds of the cdylib do NOT enable this feature — so the shipped
# `libnet_compute.{dylib,so}` never exports the helpers, and a
# consumer of the Go binding can't call them even by bypassing
# the Go wrapper.
default = []
test-helpers = []

[dependencies]
# Core mesh types — needed because we expose C-ABI handles that wrap
# `NetHandle`-style MeshNode refs handed in by the existing
# `bindings/go/net` (via the `net_mesh` FFI), and because daemons
# reach into `adapter::net::compute::MeshDaemon` / `CausalEvent`
# types at the bridge layer.
#
# The feature list MUST match what the standalone `libnet.dylib`
# build enables (see `bindings/go/README.md` — `cargo build --release
# --features "netdb redex-disk"`). Both cdylibs (`libnet.dylib` and
# `libnet_compute.dylib`) export the same `#[no_mangle]` FFI symbols
# from `net::ffi`; the Go test binary's link order resolves them to
# `libnet_compute.dylib`'s copy. If the two crates compile `net` with
# different features, cfg-gated fields on shared types (`CapabilitySet`,
# `MeshNode`, etc) shift offsets and the announce/find paths read
# through the wrong layout — a subtle UB that surfaces as garbage in
# the GPU vendor field on `find_nodes`. Keep these in sync with the
# Go binding's documented build command.
net = { package = "net-mesh", version = "0.34.0", path = "../../..", features = ["net", "netdb", "redex-disk", "tool"] }
# SDK compute surface — `DaemonRuntime`, `DaemonHandle`,
# `MigrationHandle`, `StateSnapshot`. The Go FFI delegates to this
# layer so all three language bindings stay behavior-aligned.
net-sdk = { package = "net-mesh-sdk", version = "0.34.0", path = "../../../sdk", features = ["net", "compute", "groups"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
bytes = "1"
dashmap = "6"
# Shared lock primitives used by the callback-dispatch table.
parking_lot = "0.12"
# `libc::free` for Go-allocated snapshot buffers that the dispatcher
# hands us. Go side allocates via `C.malloc`; we release via the
# matching `free`.
libc = "0.2"
# JSON marshaling for the `PlacementFilter` candidate payload (Phase 7
# slice 4) + the Phase 6c capability-aggregation FFI surface
# (`net_capability_aggregate` / `net_capability_capacity_ranking`).
# Bounded per-call cost; same json crate the rest of the tree uses
# for cap diff / predicate IR.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `[profile.release]` intentionally omitted — cargo ignores non-root
# profiles ("profiles for the non root package will be ignored"). The
# workspace root governs release-profile settings (lto = true and
# friends) for every member crate.
