[package]
name = "net-cortex-ffi"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "C ABI CortEX (NetDB) tasks + memories adapter for the Go binding of Net"
# Distributed as a cdylib alongside the Go binding, not via crates.io.
# Block accidental `cargo publish`.
publish = false

[lib]
# `cdylib` for the shared object Go links against; `staticlib` for
# platforms that prefer `.a` archives. `rlib` lets in-crate
# `#[cfg(test)] mod tests` blocks compile (cargo requires rlib for
# the test harness). The shipped artifact is the cdylib.
name = "net_cortex"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
# CortEX adapter surface lives behind the substrate's `cortex`
# feature (which chains to `redex` + `net`). The Go FFI delegates
# to the same adapter the Node + Python bindings wrap, so all
# three language surfaces stay behavior-aligned.
net = { package = "ai2070-net", version = "0.17.0", path = "../../..", default-features = false, features = ["cortex"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
# JSON at the FFI boundary: filter specs flow Go → Rust as one
# JSON object, list / stream results flow Rust → Go as one JSON
# string per row batch. Mirrors `deck-ffi`'s convention for
# stream payloads (audit / log / snapshot stream all use JSON).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
