[package]
name = "net-deck-ffi"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
description = "C ABI Deck operator-side SDK for the Go binding of Net"
# Distributed as a cdylib alongside the Go binding, not via crates.io.
publish = false

[lib]
# `cdylib` for the shared object Go links against; `staticlib` for
# platforms that prefer `.a` archives; `rlib` so in-crate
# `#[cfg(test)] mod tests` blocks can run via the test harness.
# The shipped artifact is the cdylib. The C header at
# `include/net_deck.h` (Phase 7) ships against this cdylib.
name = "net_deck"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
# Substrate-side Deck SDK + the supervisor runtime. The substrate's
# `deck` feature pulls in `meshos` transitively; we list both
# explicitly so the dep chain is self-documenting at the crate
# boundary.
net = { package = "net-mesh", version = "0.26.0", path = "../../..", default-features = false, features = ["meshos"] }
parking_lot = "0.12"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
serde_json = "1"
# Zeroizing wrapper for transient operator-seed copies in the
# net_deck_client_new / net_deck_operator_identity_new entry
# points.
zeroize = "1"
