[package]
name = "net-meshdb-ffi"
version = "0.27.3"
edition = "2021"
license = "Apache-2.0"
description = "C ABI MeshDB query layer for the Go binding of Net"
# Distributed as a cdylib alongside the Go binding, not via crates.io.
# Block accidental `cargo publish`.
publish = false

[lib]
# `cdylib` for the shared object Go links against; `staticlib` for
# platforms that prefer `.a` archives. `rlib` lets in-crate
# `#[cfg(test)] mod tests` blocks compile (cargo requires rlib for
# the test harness). The shipped artifact is the cdylib.
name = "net_meshdb"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
# Core meshdb surface. The Go FFI delegates to this layer so all
# three language bindings stay behavior-aligned. `meshdb` is
# standalone of `net` (the FFI's first slice ships a local executor
# over an in-memory ChainReader), so the feature list stays minimal
# — Phase B+ slices that wire the federated transport will add
# `net` here.
net = { package = "net-mesh", version = "0.27.3", path = "../../..", default-features = false, features = ["meshdb"] }
parking_lot = "0.12"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
# Postcard for decoding aggregate / joined / window payloads
# at the FFI boundary. Slice 1 ships only the atomic operators,
# so postcard isn't on the hot path here, but slice 2+ will
# decode sentinel-row payloads on the Go side via this dep.
postcard = { version = "1", default-features = false, features = ["alloc"] }
# serde_json for the slice 3 predicate-JSON parser. The Go side
# emits one JSON object per Filter call; the FFI parses it into
# a typed `Predicate` then converts to PredicateWire.
serde_json = "1"
