[package]
name = "net-rpc-ffi"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
description = "C ABI nRPC surface for the Go binding of Net"
# Distributed as a cdylib alongside the Go binding, not via crates.io.
publish = false

[lib]
# `cdylib` for the shared object Go links against; `staticlib` for
# platforms that prefer `.a` archives. `rlib` lets in-crate
# `#[cfg(test)] mod tests` blocks compile (cargo requires rlib for
# the test harness). The shipped artifact is the cdylib.
name = "net_rpc"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
# Core mesh types — needed because we expose C-ABI handles that
# wrap `Arc<MeshNode>` references handed in by the existing Go
# binding via `net::ffi::mesh::net_mesh_arc_clone`. The feature
# list MUST match what the standalone libnet.dylib build enables
# (see compute-ffi/Cargo.toml's note on cfg-gated field offsets);
# both cdylibs export the same `#[no_mangle]` FFI symbols and the
# Go test binary's link order resolves them — diverging features
# corrupt shared types' layouts.
net = { package = "ai2070-net", version = "0.11.0", path = "../../..", features = ["net", "netdb", "redex-disk"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }
bytes = "1"
parking_lot = "0.12"
async-trait = "0.1"
# `libc::free` for any cross-FFI buffers that need releasing
# through the C runtime allocator (matches compute-ffi).
libc = "0.2"
# `StreamExt::next` for polling the SDK's `RpcStream` from the
# C-ABI's blocking `net_rpc_stream_next` entry point.
futures = "0.3"

[profile.release]
lto = true
